# UMA

./: README-pl.md  README.md
data_processed/credit_score/simple_processing/: y.csv
data_processed/diabetes/: y.csv
data_processed/healthcare/hot_one/: y.csv
data_processed/healthcare/simple_processing/: X.csv
data_processed/wine/simple_processing/: X.csv  y.csv
experiments/: about_data.ipynb  credit_score_tests.ipynb  healthcare_tests.ipynb  id3_tests.ipynb  measures_of_quality.ipynb  student_performance.ipynb  wine_tests.ipynb
experiments/jupyter/: about_data.ipynb  mushroom_tests.ipynb  testing.ipynb  wine_tests.ipynb
experiments/python/: run_all_tests.py  sklern_id3.py  uma_measures.py
experiments/python/credit_score/: credit_score_forest_id3_bayes_experiments.py  credit_score_forest_id3_experiments.py  credit_score_id3_experiments.py  credit_score_id3_select_depth.py  credit_score_naive_bayes_experiments.py
experiments/python/diabetes/: diabetes_forest_id3_bayes_experiments.py  diabetes_forest_id3_experiments.py  diabetes_id3_experiments.py  diabetes_id3_select_depth.py  (+1 more)
implementations/: bayes.py  classifier.py  classifiers.py  exceptions.py  experiments_utils.py  id3.py  random_forest.py  utils.py
uma24z-nbc-random-forest/: LICENSE.txt  pyproject.toml
uma24z-nbc-random-forest/tests/: test_classifier.py  test_id3.py  test_measures_of_quality.py  test_naive_bayes.py  test_random_forest.py
uma24z-nbc-random-forest/uma24z_nbc_random_forest/: bayes.py  classifiers.py  experiments_utils.py  id3.py  random_forest.py  utils.py
(+27 files in other folders)
